--- a/src/Hjmos.BaseControls/Themes/Styles/Button.xaml
+++ b/src/Hjmos.BaseControls/Themes/Styles/Button.xaml
@@ -5,7 +5,7 @@
         <ResourceDictionary Source="Base/ButtonBaseStyle.xaml"/>
     </ResourceDictionary.MergedDictionaries>
     <Style TargetType="Button" BasedOn="{StaticResource ButtonBaseStyle}">
-        <Setter Property="BorderThickness" Value="1"/>
+        <!--<Setter Property="BorderThickness" Value="1"/>-->
         <Style.Triggers>
             <Trigger Property="IsMouseOver" Value="True">
                 <Setter Property="Background" Value="#f5f5f5"/>
