--- a/src/Hjmos.BaseControls/Themes/Styles/PasswordBox.xaml
+++ b/src/Hjmos.BaseControls/Themes/Styles/PasswordBox.xaml
@@ -5,6 +5,6 @@
         <ResourceDictionary Source="Base/PasswordBoxBaseStyle.xaml"/>
     </ResourceDictionary.MergedDictionaries>
 
-    <Style TargetType="PasswordBox" BasedOn="{StaticResource PasswordBoxStyle}"/>
+    <Style TargetType="PasswordBox" BasedOn="{StaticResource PasswordBoxBaseStyle}"/>
     <Style TargetType="controls:PasswordBox" BasedOn="{StaticResource PasswordBoxPlusBaseStyle}"/>
 </ResourceDictionary>
