--- a/src/Hjmos.BaseControls/Themes/Styles/Base/WeatherBaseStyle.xaml
+++ b/src/Hjmos.BaseControls/Themes/Styles/Base/WeatherBaseStyle.xaml
@@ -46,16 +46,16 @@
                         <Border Grid.Row="1" BorderBrush="#1A8392" BorderThickness="0,0,0,1">
                             <Grid>
                                 <Grid.ColumnDefinitions>
-                                    <ColumnDefinition/>
-                                    <ColumnDefinition/>
+                                    <ColumnDefinition Width="auto"/>
+                                    <ColumnDefinition Width="*"/>
                                 </Grid.ColumnDefinitions>
                                 <StackPanel Orientation="Horizontal" Grid.Column="0" HorizontalAlignment="Left" Margin="10,0,0,0">
-                                    <controls:SvgBox VerticalAlignment="Center" Margin="15"  ImageSource="{Binding WeatherData.Condition,RelativeSource={RelativeSource Mode=TemplatedParent}, Converter={StaticResource Name2ImageSourceConverter}}"  HorizontalAlignment="Center"/>
+                                    <controls:SvgBox VerticalAlignment="Center" Margin="15"  ImageSource="{Binding WeatherData.Condition,RelativeSource={RelativeSource Mode=TemplatedParent}, Converter={StaticResource Name2ImageSourceConverter}}" HorizontalAlignment="Center"/>
                                     <TextBlock x:Name="PART_Condition" Text="{Binding WeatherData.Condition,RelativeSource={RelativeSource Mode=TemplatedParent}}" VerticalAlignment="Center" Margin="10,0,0,0"  Foreground="White" />
                                     <TextBlock Text="{Binding WeatherData.Temperature,RelativeSource={RelativeSource Mode=TemplatedParent},StringFormat=/{0}℃}" FontSize="{Binding ElementName=PART_Condition,Path=FontSize}" Foreground="White" VerticalAlignment="Center"/>
                                 </StackPanel>
                                 <!--<controls:SvgBox ImageSource="{Binding WeatherData.Precipitation,RelativeSource={RelativeSource Mode=TemplatedParent},Converter={StaticResource Name2ImageSourceConverter}}" Grid.Column="1" HorizontalAlignment="Right"/>-->
-                                <controls:ImageViewer ImageSource="pack://application:,,,/Hjmos.BaseControls;component/Resources/Image/水滴.svg" Grid.Column="1" VerticalAlignment="Center" HorizontalAlignment="Right" Margin="10" Width="25"/>
+                                <controls:ImageViewer ImageSource="pack://application:,,,/Hjmos.BaseControls;component/Resources/Image/水滴.svg" Grid.Column="1" VerticalAlignment="Center" HorizontalAlignment="Right" Margin="15" />
                             </Grid>
                         </Border>
                         <Grid Grid.Row="2">
